# reachy-mini-mcp

./: README.md  pyproject.toml
src/: __init__.py  expressions.py  robot.py  server.py  voice.py
tests/: conftest.py  test_robot.py  test_server.py  test_voice.py
