# ABOUTME: Project metadata and dependency manifest for the Reachy Mini MCP server.
# ABOUTME: uv-managed; build backend is hatchling; deps tracked in uv.lock.

[project]
name = "reachy-mini-mcp"
version = "0.4.0"
description = "MCP server for the Pollen Robotics Reachy Mini robot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jack C Crawford", email = "jack@mvara.ai" },
    { name = "Eclipse", email = "eclipse@mvara.ai" },
    { name = "Regenera", email = "regenera@mvara.ai" },
    { name = "Harper Reed", email = "harper@2389.ai" },
]

dependencies = [
    "mcp>=1.25,<2",
    "elevenlabs~=2.46",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydub>=0.25",
    "pillow>=10.0",
    "reachy-mini @ git+https://github.com/pollen-robotics/reachy_mini.git@develop",
    "eclipse-zenoh~=1.7.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
reachy-mini-mcp = "src.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # let black/ruff format own line length

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
